--- a/FTTBlazor/wwwroot/index.html
+++ b/FTTBlazor/wwwroot/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div style="height: 100%;" id="app">Loading...</div>
 
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
