Removendo conflitos para os consumidores

--- a/src/FTTBlazor/wwwroot/index.html
+++ b/src/FTTBlazor/wwwroot/index.html
@@ -7,13 +7,15 @@
     <title>FTTBlazor</title>
     <base href="/" />
 
+    <link rel="icon" href="icon-512.ico">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="css/fttSite.css" rel="stylesheet" />
 
     <link href="css/fttBlazor.css" rel="stylesheet" />
 
-    <link href="manifest.json" rel="manifest" />
+    <link href="fttManifest.json" rel="manifest" />
 
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 
