--- a/src/FTTBlazor.Client/wwwroot/index.html
+++ b/src/FTTBlazor.Client/wwwroot/index.html
@@ -25,7 +25,7 @@
 <body>
     <div style="height: 100%;" id="app">Loading...</div>
 
-    <div id="blazor-error-ui">
+    <div id="blazor-error-ui" style="background-color: var(--brandtwo); !important; color: white; ">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
